[tool.poetry]
name = "pid-resolution-monitor"
version = "0.1.0"
description = ""
authors = ["wilkos-dans <wilko.steinhoff@dans.knaw.nl>"]
readme = "README.md"
package-mode = true
packages = [{include = "pid_resolution_monitor", from = "src"}]
#include = ["resources/*", "logs/*"]

#python 3.12:
#python -m ensurepip --upgrade
#python -m pip install --upgrade setuptools
#python -m pip install <module>

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
fastapi = "^0.111.0"
httpx = "^0.27.0"
uvicorn = "^0.30.0"
flower = "^2.0.1"
idutils = "^1.2.1"
tenacity = "^8.3.0"
requests = "^2.32.2"
jsonschema = "^4.22.0"
dynaconf = "^3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
